[package]
name = "pi-activitypub-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["async-await"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.27", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2.0"
bytes = "0.6.0"
async-trait = "0.1"
url = "2.4.1"
sqlx = { version = "0.7.2", features = [ "runtime-tokio" ] }
rusqlite = "0.29.0"
drop-root = "0.1.1"
percent-encoding = "2.2"
prost = "0.11.8"
websocket = "0.26.5"
reqwest = { version = "0.11.22", features = ["json"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
sha256 = "1.4.0"
urlencoding = "2.1.3"
chrono = "0.4.31"
dbif = { path = 'dbif' }
rsa = { version = "0.9.6", features = ["serde", "pem", "sha2"] }
pkcs1 = "0.7.5"
rand = "0.8.5"
base64 = "0.21.5"
secp256k1 = { version="0.28.0", features = ["hashes"] }
sigh = "1.0.1"
http = "1.0.0"
httpdate = "1.0.3"
thiserror = { version = "1.0.50", features = [] }
pem = { version = "3.0.3", features = [] }
#openssl = { version = "0.10", features = ["vendored"] }
